# itadori

./: Cargo.toml  LICENSE  README.md  gateway.example.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  lib.rs  main.rs  process.rs  proxy.rs  self_update.rs  server.rs  tui.rs
tests/: app_state_tests.rs  config_tests.rs
