[package]
name = "itadori"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
libc = "0.2"
ratatui = { version = "0.28", features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
